# pkg/api/types/v1alpha1/istio_resources.pb.go
@@ -652,6 +652,91 @@ func (x *VirtualService) GetExportTo() []string {
 	return nil
 }
 
+// RequestAuthentication represents an Istio RequestAuthentication resource.
+type RequestAuthentication struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// name is the name of the request authentication.
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	// namespace is the namespace of the request authentication.
+	Namespace string `protobuf:"bytes,2,opt,name=namespace,proto3" json:"namespace,omitempty"`
+	// raw_spec is the request authentication spec as a JSON string.
+	RawSpec string `protobuf:"bytes,3,opt,name=raw_spec,json=rawSpec,proto3" json:"raw_spec,omitempty"`
+	// selector is the criteria used to select the specific set of pods/VMs.
+	Selector *WorkloadSelector `protobuf:"bytes,4,opt,name=selector,proto3" json:"selector,omitempty"`
+	// target_refs is the list of resources that this request authentication applies to.
+	TargetRefs []*PolicyTargetReference `protobuf:"bytes,5,rep,name=target_refs,json=targetRefs,proto3" json:"target_refs,omitempty"`
+}
+
+func (x *RequestAuthentication) Reset() {
+	*x = RequestAuthentication{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[8]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *RequestAuthentication) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RequestAuthentication) ProtoMessage() {}
+
+func (x *RequestAuthentication) ProtoReflect() protoreflect.Message {
+	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[8]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RequestAuthentication.ProtoReflect.Descriptor instead.
+func (*RequestAuthentication) Descriptor() ([]byte, []int) {
+	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{8}
+}
+
+func (x *RequestAuthentication) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *RequestAuthentication) GetNamespace() string {
+	if x != nil {
+		return x.Namespace
+	}
+	return ""
+}
+
+func (x *RequestAuthentication) GetRawSpec() string {
+	if x != nil {
+		return x.RawSpec
+	}
+	return ""
+}
+
+func (x *RequestAuthentication) GetSelector() *WorkloadSelector {
+	if x != nil {
+		return x.Selector
+	}
+	return nil
+}
+
+func (x *RequestAuthentication) GetTargetRefs() []*PolicyTargetReference {
+	if x != nil {
+		return x.TargetRefs
+	}
+	return nil
+}
+
 // IstioControlPlaneConfig represents configuration from the Istio control plane.
 type IstioControlPlaneConfig struct {
 	state         protoimpl.MessageState
@@ -671,7 +756,7 @@ type IstioControlPlaneConfig struct {
 func (x *IstioControlPlaneConfig) Reset() {
 	*x = IstioControlPlaneConfig{}
 	if protoimpl.UnsafeEnabled {
-		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[8]
+		mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[9]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		ms.StoreMessageInfo(mi)
 	}
@@ -684,7 +769,7 @@ func (x *IstioControlPlaneConfig) String() string {
 func (*IstioControlPlaneConfig) ProtoMessage() {}
 
 func (x *IstioControlPlaneConfig) ProtoReflect() protoreflect.Message {
-	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[8]
+	mi := &file_types_v1alpha1_istio_resources_proto_msgTypes[9]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -697,7 +782,7 @@ func (x *IstioControlPlaneConfig) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use IstioControlPlaneConfig.ProtoReflect.Descriptor instead.
 func (*IstioControlPlaneConfig) Descriptor() ([]byte, []int) {
-	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{8}
+	return file_types_v1alpha1_istio_resources_proto_rawDescGZIP(), []int{9}
 }
 
 func (x *IstioControlPlaneConfig) GetPilotScopeGatewayToNamespace() bool {
@@ -823,20 +908,36 @@ var file_types_v1alpha1_istio_resources_proto_rawDesc = []byte{
 	0x73, 0x12, 0x1a, 0x0a, 0x08, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x73, 0x18, 0x05, 0x20,
 	0x03, 0x28, 0x09, 0x52, 0x08, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x73, 0x12, 0x1b, 0x0a,
 	0x09, 0x65, 0x78, 0x70, 0x6f, 0x72, 0x74, 0x5f, 0x74, 0x6f, 0x18, 0x06, 0x20, 0x03, 0x28, 0x09,
-	0x52, 0x08, 0x65, 0x78, 0x70, 0x6f, 0x72, 0x74, 0x54, 0x6f, 0x22, 0x88, 0x01, 0x0a, 0x17, 0x49,
-	0x73, 0x74, 0x69, 0x6f, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x6f, 0x6c, 0x50, 0x6c, 0x61, 0x6e, 0x65,
-	0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12, 0x46, 0x0a, 0x20, 0x70, 0x69, 0x6c, 0x6f, 0x74, 0x5f,
-	0x73, 0x63, 0x6f, 0x70, 0x65, 0x5f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x5f, 0x74, 0x6f,
-	0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x08,
-	0x52, 0x1c, 0x70, 0x69, 0x6c, 0x6f, 0x74, 0x53, 0x63, 0x6f, 0x70, 0x65, 0x47, 0x61, 0x74, 0x65,
-	0x77, 0x61, 0x79, 0x54, 0x6f, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12, 0x25,
-	0x0a, 0x0e, 0x72, 0x6f, 0x6f, 0x74, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x6f, 0x6f, 0x74, 0x4e, 0x61, 0x6d, 0x65,
-	0x73, 0x70, 0x61, 0x63, 0x65, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
-	0x63, 0x6f, 0x6d, 0x2f, 0x6c, 0x69, 0x61, 0x6d, 0x61, 0x77, 0x68, 0x69, 0x74, 0x65, 0x2f, 0x6e,
-	0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69,
-	0x2f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x62,
-	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x52, 0x08, 0x65, 0x78, 0x70, 0x6f, 0x72, 0x74, 0x54, 0x6f, 0x22, 0xfe, 0x01, 0x0a, 0x15, 0x52,
+	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x41, 0x75, 0x74, 0x68, 0x65, 0x6e, 0x74, 0x69, 0x63, 0x61,
+	0x74, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x1c, 0x0a, 0x09, 0x6e, 0x61, 0x6d, 0x65,
+	0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x6e, 0x61, 0x6d,
+	0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12, 0x19, 0x0a, 0x08, 0x72, 0x61, 0x77, 0x5f, 0x73, 0x70,
+	0x65, 0x63, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x72, 0x61, 0x77, 0x53, 0x70, 0x65,
+	0x63, 0x12, 0x46, 0x0a, 0x08, 0x73, 0x65, 0x6c, 0x65, 0x63, 0x74, 0x6f, 0x72, 0x18, 0x04, 0x20,
+	0x01, 0x28, 0x0b, 0x32, 0x2a, 0x2e, 0x6e, 0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2e,
+	0x74, 0x79, 0x70, 0x65, 0x73, 0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2e, 0x57,
+	0x6f, 0x72, 0x6b, 0x6c, 0x6f, 0x61, 0x64, 0x53, 0x65, 0x6c, 0x65, 0x63, 0x74, 0x6f, 0x72, 0x52,
+	0x08, 0x73, 0x65, 0x6c, 0x65, 0x63, 0x74, 0x6f, 0x72, 0x12, 0x50, 0x0a, 0x0b, 0x74, 0x61, 0x72,
+	0x67, 0x65, 0x74, 0x5f, 0x72, 0x65, 0x66, 0x73, 0x18, 0x05, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x2f,
+	0x2e, 0x6e, 0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2e, 0x74, 0x79, 0x70, 0x65, 0x73,
+	0x2e, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31, 0x2e, 0x50, 0x6f, 0x6c, 0x69, 0x63, 0x79,
+	0x54, 0x61, 0x72, 0x67, 0x65, 0x74, 0x52, 0x65, 0x66, 0x65, 0x72, 0x65, 0x6e, 0x63, 0x65, 0x52,
+	0x0a, 0x74, 0x61, 0x72, 0x67, 0x65, 0x74, 0x52, 0x65, 0x66, 0x73, 0x22, 0x88, 0x01, 0x0a, 0x17,
+	0x49, 0x73, 0x74, 0x69, 0x6f, 0x43, 0x6f, 0x6e, 0x74, 0x72, 0x6f, 0x6c, 0x50, 0x6c, 0x61, 0x6e,
+	0x65, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12, 0x46, 0x0a, 0x20, 0x70, 0x69, 0x6c, 0x6f, 0x74,
+	0x5f, 0x73, 0x63, 0x6f, 0x70, 0x65, 0x5f, 0x67, 0x61, 0x74, 0x65, 0x77, 0x61, 0x79, 0x5f, 0x74,
+	0x6f, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x08, 0x52, 0x1c, 0x70, 0x69, 0x6c, 0x6f, 0x74, 0x53, 0x63, 0x6f, 0x70, 0x65, 0x47, 0x61, 0x74,
+	0x65, 0x77, 0x61, 0x79, 0x54, 0x6f, 0x4e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12,
+	0x25, 0x0a, 0x0e, 0x72, 0x6f, 0x6f, 0x74, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63,
+	0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0d, 0x72, 0x6f, 0x6f, 0x74, 0x4e, 0x61, 0x6d,
+	0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x42, 0x38, 0x5a, 0x36, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
+	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x6c, 0x69, 0x61, 0x6d, 0x61, 0x77, 0x68, 0x69, 0x74, 0x65, 0x2f,
+	0x6e, 0x61, 0x76, 0x69, 0x67, 0x61, 0x74, 0x6f, 0x72, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70,
+	0x69, 0x2f, 0x74, 0x79, 0x70, 0x65, 0x73, 0x2f, 0x76, 0x31, 0x61, 0x6c, 0x70, 0x68, 0x61, 0x31,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -851,7 +952,7 @@ func file_types_v1alpha1_istio_resources_proto_rawDescGZIP() []byte {
 	return file_types_v1alpha1_istio_resources_proto_rawDescData
 }
 
-var file_types_v1alpha1_istio_resources_proto_msgTypes = make([]protoimpl.MessageInfo, 12)
+var file_types_v1alpha1_istio_resources_proto_msgTypes = make([]protoimpl.MessageInfo, 13)
 var file_types_v1alpha1_istio_resources_proto_goTypes = []any{
 	(*DestinationRule)(nil),         // 0: navigator.types.v1alpha1.DestinationRule
 	(*DestinationRuleSubset)(nil),   // 1: navigator.types.v1alpha1.DestinationRuleSubset
@@ -861,25 +962,28 @@ var file_types_v1alpha1_istio_resources_proto_goTypes = []any{
 	(*Gateway)(nil),                 // 5: navigator.types.v1alpha1.Gateway
 	(*Sidecar)(nil),                 // 6: navigator.types.v1alpha1.Sidecar
 	(*VirtualService)(nil),          // 7: navigator.types.v1alpha1.VirtualService
-	(*IstioControlPlaneConfig)(nil), // 8: navigator.types.v1alpha1.IstioControlPlaneConfig
-	nil,                             // 9: navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
-	nil,                             // 10: navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
-	nil,                             // 11: navigator.types.v1alpha1.Gateway.SelectorEntry
+	(*RequestAuthentication)(nil),   // 8: navigator.types.v1alpha1.RequestAuthentication
+	(*IstioControlPlaneConfig)(nil), // 9: navigator.types.v1alpha1.IstioControlPlaneConfig
+	nil,                             // 10: navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
+	nil,                             // 11: navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
+	nil,                             // 12: navigator.types.v1alpha1.Gateway.SelectorEntry
 }
 var file_types_v1alpha1_istio_resources_proto_depIdxs = []int32{
 	1,  // 0: navigator.types.v1alpha1.DestinationRule.subsets:type_name -> navigator.types.v1alpha1.DestinationRuleSubset
 	2,  // 1: navigator.types.v1alpha1.DestinationRule.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
-	9,  // 2: navigator.types.v1alpha1.DestinationRuleSubset.labels:type_name -> navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
-	10, // 3: navigator.types.v1alpha1.WorkloadSelector.match_labels:type_name -> navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
+	10, // 2: navigator.types.v1alpha1.DestinationRuleSubset.labels:type_name -> navigator.types.v1alpha1.DestinationRuleSubset.LabelsEntry
+	11, // 3: navigator.types.v1alpha1.WorkloadSelector.match_labels:type_name -> navigator.types.v1alpha1.WorkloadSelector.MatchLabelsEntry
 	2,  // 4: navigator.types.v1alpha1.EnvoyFilter.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
 	3,  // 5: navigator.types.v1alpha1.EnvoyFilter.target_refs:type_name -> navigator.types.v1alpha1.PolicyTargetReference
-	11, // 6: navigator.types.v1alpha1.Gateway.selector:type_name -> navigator.types.v1alpha1.Gateway.SelectorEntry
+	12, // 6: navigator.types.v1alpha1.Gateway.selector:type_name -> navigator.types.v1alpha1.Gateway.SelectorEntry
 	2,  // 7: navigator.types.v1alpha1.Sidecar.workload_selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
-	8,  // [8:8] is the sub-list for method output_type
-	8,  // [8:8] is the sub-list for method input_type
-	8,  // [8:8] is the sub-list for extension type_name
-	8,  // [8:8] is the sub-list for extension extendee
-	0,  // [0:8] is the sub-list for field type_name
+	2,  // 8: navigator.types.v1alpha1.RequestAuthentication.selector:type_name -> navigator.types.v1alpha1.WorkloadSelector
+	3,  // 9: navigator.types.v1alpha1.RequestAuthentication.target_refs:type_name -> navigator.types.v1alpha1.PolicyTargetReference
+	10, // [10:10] is the sub-list for method output_type
+	10, // [10:10] is the sub-list for method input_type
+	10, // [10:10] is the sub-list for extension type_name
+	10, // [10:10] is the sub-list for extension extendee
+	0,  // [0:10] is the sub-list for field type_name
 }
 
 func init() { file_types_v1alpha1_istio_resources_proto_init() }
@@ -985,6 +1089,18 @@ func file_types_v1alpha1_istio_resources_proto_init() {
 			}
 		}
 		file_types_v1alpha1_istio_resources_proto_msgTypes[8].Exporter = func(v any, i int) any {
+			switch v := v.(*RequestAuthentication); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_types_v1alpha1_istio_resources_proto_msgTypes[9].Exporter = func(v any, i int) any {
 			switch v := v.(*IstioControlPlaneConfig); i {
 			case 0:
 				return &v.state
@@ -1003,7 +1119,7 @@ func file_types_v1alpha1_istio_resources_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_types_v1alpha1_istio_resources_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   12,
+			NumMessages:   13,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
